dataset/local/tf_rds_deletion_protection/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_rds_cluster
        name: my_cluster
        values:
          cluster_identifier: my-rds-cluster
          engine: aurora-mysql
          deletion_protection: true
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_rds_cluster
        name: my_cluster
        values:
          cluster_identifier: my-rds-cluster
          engine: aurora-mysql
          deletion_protection: false
