dataset/local/tf_rds_deletion_protection/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-rds-cluster-deletion-protection-enabled
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-rds-cluster-deletion-protection-enabled
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-rds-cluster-deletion-protection-enabled
    kind: Plan
    resources:
      - bad-plan
    result: fail
